# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  coverage.xml  filters.py  pyproject.toml
.github/workflows/: build.yml
labels/: models.py
labels/migrations/: 0001_initial.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_labels_app/: forms.py  models.py  urls.py  views.py
task_manager/: filters.py  settings.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html  index.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/registration/: login.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  index.html  show.html  tests.py  update.html
templates/users/: create.html  delete.html  index.html  update.html
users/: __init__.py  forms.py  tests.py  urls.py  views.py
