[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.5",
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "rollbar>=1.3.0",
    "whitenoise[brotli]>=6.12.0",
]

[tool.ruff]
exclude = [
  "task_manager/settings.py",
  "**/migrations",
]
